--- a/education_app/pubspec.yaml
+++ b/education_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shimmer: ^2.0.0
   permission_handler: ^11.4.0
+  flutter_html: ^3.0.0
   no_screenshot: ^0.3.1
   http: ^1.1.0
   google_fonts: ^6.2.1
@@ -53,6 +54,7 @@ dependencies:
   pdf: ^3.10.4
   printing: ^5.11.1
   image_picker: ^1.1.2
+  flutter_windowmanager_plus: ^1.0.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
