--- a/education_app/pubspec.yaml
+++ b/education_app/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.1
+  url_launcher: ^6.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  syncfusion_flutter_pdfviewer: ^29.1.38
   shimmer: ^2.0.0
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
