--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   petitparser: ^6.1.0
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
+  flutter_screenutil: ^5.9.3
   no_screenshot: ^0.3.1
   http: ^1.1.0
   google_fonts: ^6.2.1
