--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.1
-  url_launcher: ^6.2.4
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,9 +44,12 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^29.1.38
   shimmer: ^2.0.0
   math_expressions: 2.1.0
+  cached_network_image: ^3.4.1
   petitparser: ^6.1.0
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
+  flutter_html_all: ^3.0.0
+  flutter_math_fork: ^0.7.4
   flutter_screenutil: ^5.9.3
   no_screenshot: ^0.3.1
   http: ^1.1.0
