--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
   flutter_html_all: ^3.0.0
-  flutter_math_fork: ^0.7.4
+#  flutter_math_fork: ^0.7.4
   flutter_screenutil: ^5.9.3
   no_screenshot: ^0.3.1
   http: ^1.1.0
