--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-#  flutter_widget_from_html: ^0.16.0
+  flutter_widget_from_html: ^0.16.0
   syncfusion_flutter_pdfviewer: ^29.1.38
   shimmer: ^2.0.0
   math_expressions: 2.1.0
@@ -49,7 +49,6 @@ dependencies:
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
   flutter_html_all: ^3.0.0
-#  flutter_math_fork: ^0.7.4
   flutter_screenutil: ^5.9.3
   no_screenshot: ^0.3.1
   http: ^1.1.0
@@ -70,6 +69,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -119,3 +119,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  flutter_math_fork: ^0.7.4
