--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_widget_from_html: ^0.16.0
   syncfusion_flutter_pdfviewer: ^29.1.38
   shimmer: ^2.0.0
   math_expressions: 2.1.0
@@ -48,7 +47,7 @@ dependencies:
   petitparser: ^6.1.0
   permission_handler: ^11.4.0
   flutter_html: ^3.0.0
-  flutter_html_all: ^3.0.0
+#  flutter_html_all: ^3.0.0
   flutter_screenutil: ^5.9.3
   no_screenshot: ^0.3.1
   http: ^1.1.0
