--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
+# Increase Gradle JVM memory for builds
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+
+# Enable AndroidX and Jetifier
 android.useAndroidX=true
 android.enableJetifier=true
+
+# ? Required for Google Play (16 KB memory page support)
+android.enableNative16kPages=true
