--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.9.24'
+    // Updated Kotlin for future Flutter support
+    ext.kotlin_version = '2.1.0'
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.2'
+        // Updated AGP as Flutter recommends AGP 8.6.0+
+        classpath 'com.android.tools.build:gradle:8.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
