--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,5 +5,5 @@ org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryErro
 android.useAndroidX=true
 android.enableJetifier=true
 
-# ? Required for Google Play (16 KB memory page support)
+# Required for Google Play (16 KB memory page support)
 android.enableNative16kPages=true
